Styled some forms

--- a/app/views/event/update.erb
+++ b/app/views/event/update.erb
@@ -10,16 +10,16 @@
 <h2>Event Details</h2>
 <%= form_for :event do |f| %>
 <%= f.error_messages %>
-  <p><%= f.label(:name, "Name:") %><%= f.text_field(:name) %></p>
-  <p><%= f.label(:description, "Description:") %><%= f.text_field(:description) %></p>
+  <p><%= f.label(:name, "Name: *") %><%= f.text_field(:name) %></p>
+  <p><%= f.label(:description, "Description: ") %><%= f.text_field(:description) %></p>
   <p><%= f.label(:address, "Address:") %> <%= f.text_field(:address) %></p>
-  <p><%= f.label(:city, "City:") %> <%= f.text_field(:city) %></p>
-  <p><%= f.label(:region, "Province/State:") %> <%= f.text_field(:region) %></p>
+  <p><%= f.label(:city, "City: *") %> <%= f.text_field(:city) %></p>
+  <p><%= f.label(:region, "Province/State: *") %> <%= f.text_field(:region) %></p>
   <p><%= f.label(:code, "Postal/Zip Code:") %> <%= f.text_field(:code) %></p>
   <p><%= f.label(:phone, "Phone:") %> <%= f.text_field(:phone) %></p>
   <p><%= f.label(:email, "Email:") %> <%= f.text_field(:email) %></p>
   <p><%= f.label(:url, "Url:") %> <%= f.text_field(:url) %></p>
-  <p><%= f.label(:starts_at, "Start Date/Time:") %> <%= f.text_field(:starts_at) %></p>
+  <p><%= f.label(:starts_at, "Start Date/Time: *") %> <%= f.text_field(:starts_at) %></p>
   <p><%= f.label(:ends_at, "End Date/Time:") %> <%= f.text_field(:ends_at) %></p>
   
   <p class="submit"><%= submit_tag("#{action} Event") %></p>
