--- a/app/views/main/index.erb
+++ b/app/views/main/index.erb
@@ -1,7 +1,7 @@
 <% content_for :banner do %>
   <div class="left">
       <h1>Connecting event-goers with event-goers and group deals!</h1>
-      <p>Meet others attending your event from your regionConnect with event-goers from your region and get deals doing it. Search for an event or create a new one to get started!</p>
+      <p>Meet others attending your event from your region. Connect with event-goers from your region and get deals doing it. Search for an event or create a new one to get started!</p>
 
       <div class="event-tick"><%= User.all.size %><span> event-goers sharing resources</span></div>
   </div>
