--- a/app/views/user/forgot_password.html.erb
+++ b/app/views/user/forgot_password.html.erb
@@ -4,8 +4,9 @@
   <%= flash[:message] %><br /><br />
 <% end %>
 
-Enter your email address in order to reset your password:
-<%= form_tag do %>
-Email Address: <%= text_field_tag :email %><br />
-<%= submit_tag "Submit" %>
-<% end %>
+<div class="form">
+  <%= form_tag do %>
+  <p><label id="email">Enter email address to reset password </label><%= text_field_tag :email %></p>
+  <p class="submit"><%= submit_tag "Submit" %></p>
+  <% end %>
+</div>
