--- a/app/views/user/reset_password.html.erb
+++ b/app/views/user/reset_password.html.erb
@@ -6,11 +6,14 @@
   <% if @password_reset %>
     Your password has been successfully reset. You may now <%= link_to 'login', login_path %>.
   <% else %>
-    <% form_for :user do |f| %>
-      <%= f.error_messages %>
-      New Password: <%= f.password_field :password, :value => '' %><br />
-      Confirm Password: <%= f.password_field :password_confirmation, :value => '' %><br />
-      <%= submit_tag 'Reset Password' %>
-    <% end %>
+    <div class="form">
+      <h2>Reset Password</h2>
+      <% form_for :user do |f| %>
+        <%= f.error_messages %>
+        <p><label id="password">New Password: *</label><%= f.password_field :password, :value => '' %></p>
+        <p><label id="password">Confirm Password: *</label><%= f.password_field :password_confirmation, :value => '' %></p>
+        <p class="submit"><%= submit_tag 'Reset Password' %></p>
+      <% end %>
+    </div>
   <% end %>
 <% end %>
