--- a/app/views/shared/_comment_form.erb
+++ b/app/views/shared/_comment_form.erb
@@ -4,6 +4,6 @@
   <% form_for :comment, :url => comment_new_path(@group.id), :remote => true, :html => { :multipart => true } do |f| %>
    <%= f.text_area :message, :size => "60x12" %>
    <%= f.hidden_field :parent_id %>
-   <%= submit_tag "Submit" %>
+   <br /><%= submit_tag "Submit" %>
 <% end %>
 </div>
