--- a/app/views/user/_user_info.html.erb
+++ b/app/views/user/_user_info.html.erb
@@ -12,10 +12,10 @@
   <p><label id="email">Email Address: *</label><%= f.text_field :email %></p>
   <p><label id="password">Password: *</label><%= f.password_field :password, :value => '' %></p>
   <p><label id="password_confirmation">Confirm Password: *</label><%= f.password_field :password_confirmation, :value => '' %></p>
-  <p><label id="address">Address: *</label><%= f.text_field :address %></p>
-  <p><label id="city">City: *</label><%= f.text_field :city %></p>
-  <p><label id="region">Province/State: *</label><%= f.text_field :region %></p>
-  <p><label id="code">Postal/Zip Code:*</label><%= f.text_field :code %></p>
+  <p><label id="address">Address: </label><%= f.text_field :address %></p>
+  <p><label id="city">City: </label><%= f.text_field :city %></p>
+  <p><label id="region">Province/State: </label><%= f.text_field :region %></p>
+  <p><label id="code">Postal/Zip Code: </label><%= f.text_field :code %></p>
   
   <% unless @user.new_record? %>
   <p><label id="avatar">Account Avatar:</label>
