--- a/app/views/group/_invitations.html.erb
+++ b/app/views/group/_invitations.html.erb
@@ -1,7 +1,7 @@
 <% invites_from_me = GroupInvitation.find_all_by_group_id_and_from_id(@group.id, current_user.id) %>
 <% invite_to_me = GroupInvitation.find_by_group_id_and_email(@group.id, current_user.email) %>
 <% unless invites_from_me.empty? %>
-  The following invitations have not yet been responded to:<br />
+<strong>The following invitations have not yet been responded to:</strong><br />
   <%= invites_from_me.map{|i| i.email}.to_sentence %><br />
 <% end %>
 <% unless invite_to_me.nil? %>
