--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -11,9 +11,9 @@
 <%  common_groups = users_groups & my_groups
 if !common_groups.blank?
     #find the private groups we have in common
-    common_groups.delete_if{|group| group == group.event.event_group}
+    common_groups.delete_if{|group| group == group.event.event_group || group.public?}
 
-    common_events = common_groups.collect{|group| group.event}
+    common_events = common_groups.collect{|group| group.event}.uniq!
 
     #remove the reviews I have already submitted
     reviewed_events = UserReview.find_all_by_user_id_and_reviewer_id(@user.id, current_user.id, :include => :event).collect{|review| review.event}
