--- a/app/views/main/_events_attending.html.erb
+++ b/app/views/main/_events_attending.html.erb
@@ -1,20 +1,28 @@
-<% unless @my_events.empty? %>
-  <table class="popular-events">
-    <tr>
-      <th colspan="3">My Events</th>
-    </tr>
+  <table width="100%" class="events">
+  <tr>
+    <th colspan="3">My Events</th>
+  </tr>
+  <% unless @my_events.empty? %>
   <% @my_events.each do |event| %>
-    <tr><td>
-    <%= link_to event.safe_name, event_path(event.id) %><br/>
-    <%= event.city ||event.region %> -
-    <%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue ""%>
-    <% unless event.groups.user_groups.for_user(current_user).blank? %>
-      Groups:<br />
-      <% event.groups.user_groups.for_user(current_user).each do |group| %>
-        &nbsp;&nbsp;&nbsp;&nbsp;<%= link_to group.name, group_path(group.event.id, group.id) %><br />
-      <% end %>
+  <tr>
+    <td>
+      <div class="title"><%= link_to event.safe_name, event_path(event.id) %></div>
+      <div class="location"><strong>Location:</strong> <%= event.city ||event.region %></div>
+      <div class="time"><strong>Starts at:</strong> <%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue ""%></div>
+      <% unless event.groups.user_groups.for_user(current_user).blank? %>
+      <ul class="groups">
+        <li class="title"><strong>Groups:</strong></li>
+        <% event.groups.user_groups.for_user(current_user).each do |group| %>
+        <li><%= link_to group.name, group_path(group.event.id, group.id) %></li>
+        <% end %>
+      </ul>
     <% end %>
-      </td></tr>
+    </td>
+  </tr>
+  <% end %>
+  <% else %>
+  <tr>
+    <td class="message">You're currently not attending any events.</td>
+  </tr>
   <% end %>
   </table>
-<% end %>
