--- a/app/views/main/_popular_events.html.erb
+++ b/app/views/main/_popular_events.html.erb
@@ -4,9 +4,15 @@
   </tr>
   <% @popular_events.each do |event| %>
   <tr>
-    <td class="title"><%= link_to event.safe_name, event_path(event.id) %></td>
-    <td class="location"><%= event.city || event.region %></td>
+    <td class="title"><div><%= link_to event.safe_name, event_path(event.id) %></div><div class="location"><%= event.city || event.region %></div></td>
     <td class="date"><%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue "" %></td>
+    <td class="attend">
+      <% unless event.attendees.include?(current_user) %>
+      <%= link_to 'Attend', attend_event_path(event.id) %>
+      <% else %>
+      <strong>Attending</strong>
+      <% end %>
+    </td>
   </tr>
-<% end %>
+  <% end %>
 </table>
