--- a/app/views/main/index.erb
+++ b/app/views/main/index.erb
@@ -22,10 +22,16 @@
   <div class="clear-fix">&nbsp;</div>
 <% end %>
 
-<%= render :partial => 'events_attending' unless current_user.nil? %>
-                    
+<% content_for :left_column do %>
+  <% if current_user.nil? %>
+     &nbsp;
+  <% else %>
+    <%= render :partial => 'my_invitations' %>
+    <%= render :partial => 'events_attending' %>
+    <%= render :partial => "recent_activity" %>
+  <% end %>
+<% end %>
+
 <% content_for :right_column do %>
-  <%= render :partial => 'my_invitations' unless current_user.nil? %>
   <%= render :partial => 'popular_events' %>
-  <%= render :partial => "recent_activity" unless current_user.nil? %>
 <% end %>
