--- a/app/views/shared/_header_navigation.html.erb
+++ b/app/views/shared/_header_navigation.html.erb
@@ -5,7 +5,7 @@
                 <li><%= link_to 'Sign-up', signup_path, :class => is_active?("signup") %></li>
                 <li><%= link_to 'Login', login_path, :class => is_active?("login") %></li>
                 <% else %>
-                <li><%= link_to 'My Account', myaccount_path %></li>
+                <li><%= link_to "My Account", myaccount_path %></li>
                 <li><%= link_to 'Logout', logout_path, :class => is_active?("logout") %></li>
                 <% end %>
                 <li class="sep">&nbsp;</li>
