--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -392,13 +392,13 @@ h4 {
 
 .wrapper .content-home .content-wrapper { }
 
-.wrapper .content-home .content-wrapper .left-column {
+.wrapper .content-home .content-wrapper .left_column {
 	width: 260px;
 	margin-right: 30px;
 	float: left;
 }
 
-.wrapper .content-home .content-wrapper .right-column {
+.wrapper .content-home .content-wrapper .right_column {
 	width: 650px;
 	float: left;
 }
@@ -508,12 +508,15 @@ textarea
 	padding: 3px 2px;
 }
 
+.wrapper .content-home .content-wrapper table,
 .wrapper .content-home .content-wrapper .popular-events {
 	padding: 1px 1px;
 	border: 1px solid #e6e6e6;
 	color: #5b5b5b;
+	width: 100%;
 }
 
+.wrapper .content-home .content-wrapper table tr th,
 .wrapper .content-home .content-wrapper .popular-events tr th {
 	padding: 10px 15px;
 	background: #f7f7f7;
@@ -523,8 +526,14 @@ textarea
 	border-bottom: 1px solid #e6e6e6;
 }
 
+.wrapper .content-home .content-wrapper table tr td,
 .wrapper .content-home .content-wrapper .popular-events tr td {
 	padding: 10px 15px;
+}
+
+.wrapper .content-home .content-wrapper table tr td.message {
+	font-size: 11px;
+	font-weight: bold;
 }
 
 .wrapper .content-home .content-wrapper .popular-events tr td.attend {
@@ -534,12 +543,110 @@ textarea
 }
 
 .wrapper .content-home .content-wrapper .popular-events tr td.date {
-	width: 20%;
+	width: 25%;
 	text-align: center;
+	font-size: 11px;
 }
 
 .wrapper .content-home .content-wrapper .popular-events tr td.title {
-	width: 60%;
+	width: 55%;
+}
+
+.wrapper .content-home .content-wrapper .popular-events tr td.title div.location {
+	font-size: 11px;
+}
+
+.wrapper .content-home .content-wrapper .events tr td .location, .time, .groups {
+	font-size: 11px;
+}
+
+.wrapper .content-home .content-wrapper .events,
+.wrapper .content-home .content-wrapper .group-invites {
+	margin-bottom: 15px;
+}
+
+.wrapper .content-home .content-wrapper .events tr td .groups li {
+	margin-left: 15px;
+	list-style: square;
+}
+
+.wrapper .content-home .content-wrapper .events tr td .groups li.title {
+	list-style: none;
+	margin-left: 0px;
+}
+
+/* .wrapper .content-home .content-wrapper .group-activity {
+	padding: 5px 5px;
+	border: 1px solid #e6e6e6;
+	color: #5b5b5b;
+	width: 100%;
+}
+
+.wrapper .content-home .content-wrapper .group-activity li {
+	border-bottom: 1px solid #e6e6e6;
+	padding: 15px 10px;
+} */
+
+.wrapper .content-home .content-wrapper .group-activity tr td,
+.wrapper .content-home .content-wrapper .group-invites tr td {
+	border-bottom: 1px solid #e6e6e6;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr:last-child td,
+.wrapper .content-home .content-wrapper .group-invites tr td {
+	border-bottom: none;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr td .icon {
+	float: left;
+	width: 40px;
+	height: 40px;
+	overflow: hidden;
+	
+	padding-right: 10px;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr td .info {
+	float: left;
+	width: 175px;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr td .info h2,
+.wrapper .content-home .content-wrapper .group-invites tr td h2 {
+	font-size: 15px;
+	padding: 0px 0px 3px 0px;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr td .message {
+	padding-top: 10px;
+}
+
+.wrapper .content-home .content-wrapper .group-invites tr td .message {
+	padding: 7px 7px;
+	background: #f7f7f7;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	font-size: 12px;
+	margin: 10px 0px 2px 0px;
+}
+
+.wrapper .content-home .content-wrapper .group-invites tr td .message-from {
+	font-size: 11px;
+	font-style: italic;
+	text-align: right;
+	
+	margin-bottom: 10px;
+}
+
+.wrapper .content-home .content-wrapper .group-activity tr td .in,
+.wrapper .content-home .content-wrapper .group-invites tr td .desc {
+	font-size: 11px;
+}
+
+.wrapper .content-home .content-wrapper .group-invites tr td .links {
+	text-transform: uppercase;
+	text-align: right;
 }
 
 .wrapper .content-two-columns .column-wrapper .left-column p.cant-find {
@@ -550,7 +657,7 @@ textarea
 	color: #5b5b5b;
 }
 
-.message{ background-color: #EEEEEE; border: gray solid 1px; margin: 5px;}
+/* .message{ background-color: #EEEEEE; border: gray solid 1px; margin: 5px;}
 .message .icon{ float: left; padding-right: 10px; height: 40px; width: 40px; background-color: #FFFFFF; }
 .message .info{ background-color:#CCCCCC;
 font-size:15px;
@@ -567,7 +674,7 @@ font-style:italic;
 height:16px;
 margin-left:40px;
 padding-left:19px;
-padding-top:1px;}
+padding-top:1px;} */
 
 img.rating_star{ height: 15px; width: 15px; }
 
