--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -509,7 +509,8 @@ textarea
 }
 
 .wrapper .content-home .content-wrapper table,
-.wrapper .content-home .content-wrapper .popular-events {
+.wrapper .content-home .content-wrapper .popular-events,
+table.search-result-set {
 	padding: 1px 1px;
 	border: 1px solid #e6e6e6;
 	color: #5b5b5b;
@@ -517,7 +518,8 @@ textarea
 }
 
 .wrapper .content-home .content-wrapper table tr th,
-.wrapper .content-home .content-wrapper .popular-events tr th {
+.wrapper .content-home .content-wrapper .popular-events tr th,
+table.search-result-set tr th {
 	padding: 10px 15px;
 	background: #f7f7f7;
 	color: #5b5b5b;
@@ -527,7 +529,8 @@ textarea
 }
 
 .wrapper .content-home .content-wrapper table tr td,
-.wrapper .content-home .content-wrapper .popular-events tr td {
+.wrapper .content-home .content-wrapper .popular-events tr td,
+table.search-result-set tr td {
 	padding: 10px 15px;
 }
 
@@ -588,12 +591,14 @@ textarea
 } */
 
 .wrapper .content-home .content-wrapper .group-activity tr td,
-.wrapper .content-home .content-wrapper .group-invites tr td {
+.wrapper .content-home .content-wrapper .group-invites tr td,
+table.search-result-set tr td {
 	border-bottom: 1px solid #e6e6e6;
 }
 
 .wrapper .content-home .content-wrapper .group-activity tr:last-child td,
-.wrapper .content-home .content-wrapper .group-invites tr td {
+.wrapper .content-home .content-wrapper .group-invites tr:last-child td,
+table.search-result-set tr:last-child td {
 	border-bottom: none;
 }
 
@@ -628,12 +633,42 @@ textarea
 	margin: 10px 0px 2px 0px;
 }
 
+table.search-result-set tr td .description {
+	padding: 5px 10px;
+	background: #f7f7f7;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	font-size: 13px;
+	margin: 10px 0px 2px 0px;
+	line-height: 1.5em;
+}
+
+table.search-result-set tr td h2 {
+	margin-bottom: 10px;
+}
+
+table.search-result-set tr td .location {
+	padding: 2px 0px;
+}
+
+table.search-result-set tr td .time {
+	font-size: 13px;
+	padding: 2px 0px;
+}
+
 .wrapper .content-home .content-wrapper .group-invites tr td .message-from {
 	font-size: 11px;
 	font-style: italic;
 	text-align: right;
 	
 	margin-bottom: 10px;
+}
+
+table.search-result-set tr td .read-more {
+	font-size: 12px;
+	text-transform: uppercase;
+	text-align: right;
 }
 
 .wrapper .content-home .content-wrapper .group-activity tr td .in,
@@ -652,6 +687,38 @@ textarea
 	text-transform: uppercase;
 	padding: 2px 0px;
 	color: #5b5b5b;
+}
+
+.pagination {
+	margin: 10px 0px;
+	font-size: 12px;
+	
+	text-align: right;
+	text-transform: uppercase;
+	
+	color: #B1B1B1;
+}
+
+.pagination .prev_page { }
+.pagination .next_page { }
+
+.pagination .current {
+	font-weight: bold;
+	color: #5B5B5B;
+	
+	background: #f7f7f7;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	padding: 5px 10px;
+}
+
+.pagination .disabled {
+	padding: 5px 5px;
+}
+
+.pagination a {
+	padding: 5px 5px;
 }
 
 /* .message{ background-color: #EEEEEE; border: gray solid 1px; margin: 5px;}
