Added JQuery date picker for creating events

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -6,9 +6,12 @@
 	<meta name="robots" content="index, follow" />
 
     <%= stylesheet_link_tag :all %>
+        <%= stylesheet_link_tag 'ui-lightness/jquery-ui-1.8.6.custom.css' %>
     <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js' %>
     <%= javascript_include_tag 'jquery.rails.js' %>
     <%= javascript_include_tag 'rails' %>
+        <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min.js' %>
+        <%= javascript_include_tag 'jquery-ui-timepicker-addon.js' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tag %>
 </head>
